final working calculator

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="button-row">
                 <button class="button number zero">0</button> 
-                <button class="button number">.</button>
+                <button class="button decimal">.</button>
                 <button class="button action">=</button>
             </div>
         </div>
